--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ body {
     box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+.top-header>button:active {
+    transform: scale(0.98);
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
 .right-contents{
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -272,6 +277,8 @@ body {
     background-color: black;
     background-size: 100%;
     margin: auto;
+    box-shadow: inset 0 0 0 1000px #ddd6fe75;
+    ;
 }
 
 .released-album, .trend-item{
